--- a/package.json
+++ b/package.json
@@ -9,11 +9,7 @@
         "dev": " webpack-dashboard -- webpack-dev-server",
         "deploy" : "npm run build&&gh-pages -d build"
     },
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/MockAny/mock-any-ui"
-    },
-    "homepage": "https://mockany.github.io/mockany",
+    "homepage": "https://mockany.github.io",
     "dependencies": {
         "bootstrap": "^3.3.7",
         "node-sass": "^4.7.2",
